# theo-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  backup_db.ps1  pyproject.toml  pytest.ini  requirements.txt  restart-claude.ps1
docs/: external-tools.md  janus-graph.md
skills/implement-issue/: SKILL.md
skills/review-conventions/: SKILL.md
skills/run-tests/: SKILL.md
src/janusgraph_mcp_server/: __main__.py  config.py  gremlin_client.py  gremlin_helpers.py  schema.py  server.py
src/janusgraph_mcp_server/tools/: __init__.py  domain.py  edges.py  vertices.py
src/theo_mcp_server/: cloud_storage.py  config.py  diagram_helpers.py  gremlin_client.py  gremlin_helpers.py  schema.py  server.py  validation.py
src/theo_mcp_server/tools/: diagram.py  domain.py  edges.py  graph.py  test_image.py  vertices.py
tests/: manual-tests.md  pytest.ini  test_cloud_storage.py  test_gremlin.py  test_server.py  test_validation.py  test_vertices.py
